♻️ refactor: extract, map 프라이빗 메서드로 추출 및 기타 리팩토링